--- a/template-local/content/assets/css/fhir.css
+++ b/template-local/content/assets/css/fhir.css
@@ -1,5 +1,5 @@
 body::before {
-	content: "Draft Implementation Guide Approaches Only";
+	content: "EXPERIMENTAL FOR TESTING";
 	position: fixed;
 	top: 50%;
 	left: 50%;
